--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -251,7 +251,7 @@ jobs:
             org.opencontainers.image.version=${{ env.VERSION }}
 
       - name: Test imports in the container (amd64)
-        if: steps.check-rebuild.outputs.rebuild == 'true'
+        if: ${{ steps.check-rebuild.outputs.rebuild == 'true' && contains(env.PLATFORMS, 'linux/amd64') }}
         run: |
           python <<EOF
           import subprocess
@@ -342,7 +342,7 @@ jobs:
           EOF
 
       - name: Test imports in the container (arm64)
-        if: steps.check-rebuild.outputs.rebuild == 'true'
+        if: ${{ steps.check-rebuild.outputs.rebuild == 'true' && contains(env.PLATFORMS, 'linux/arm64') }}
         run: |
           python <<EOF
           import subprocess
@@ -632,7 +632,7 @@ jobs:
             org.opencontainers.image.version=${{ env.VERSION }}
 
       - name: Test imports in the container (amd64)
-        if: steps.check-rebuild.outputs.rebuild == 'true'
+        if: ${{ steps.check-rebuild.outputs.rebuild == 'true' && contains(env.PLATFORMS, 'linux/amd64') }}
         run: |
           python <<EOF
           import subprocess
@@ -723,7 +723,7 @@ jobs:
           EOF
           
       - name: Test imports in the container (arm64)
-        if: steps.check-rebuild.outputs.rebuild == 'true'
+        if: ${{ steps.check-rebuild.outputs.rebuild == 'true' && contains(env.PLATFORMS, 'linux/arm64') }}
         run: |
           python <<EOF
           import subprocess
