--- a/responders/Jupyter_Responder/Dockerfile
+++ b/responders/Jupyter_Responder/Dockerfile
@@ -1,4 +1,4 @@
-FROM python:3.9
+FROM python:3-slim
 WORKDIR /worker
 COPY . Jupyter_Responder
 RUN test ! -e Jupyter_Responder/requirements.txt || pip install --no-cache-dir -r Jupyter_Responder/requirements.txt
@@ -6,4 +6,4 @@ RUN test ! -e Jupyter_Responder/requirements.txt || pip install --no-cache-dir -
 RUN apt update &&\
      apt install patch &&\
      patch $(python3 -c "from papermill import iorw; print(iorw.__file__)") Jupyter_Responder/papermill_iorw.patch 
-ENTRYPOINT Jupyter_Responder/jupyter.py
+ENTRYPOINT ["python", "Jupyter_Responder/jupyter.py"]
