--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,11 +30,11 @@ jobs:
           echo "Building analyzers matrix..."
           # define your lists of allowed directories for analyzers and responders for targeted build
           # If you want to disable filtering, set the corresponding flag to "false"
-          filter_analyzers="true"
-          filter_responders="true"
+          filter_analyzers="false"
+          filter_responders="false"
           
-          allowed_analyzers="Hippocampe|Diario|EmlParser|ClamAV|FileInfo|Maltiverse|MalwareClustering"
-          allowed_responders="VirustotalDownloader|RT4|MSDefenderOffice365|Jupyter_Responder"
+          allowed_analyzers="Hippocampe|Diario|EmlParser|ClamAV|FileInfo"
+          allowed_responders="MSDefenderOffice365"
           
           # If filtering is disabled, use a regex that matches everything.
           if [ "$filter_analyzers" != "true" ]; then
